added html tree to the project

--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,38 @@
       rel="icon"
       href="https://cdn-icons-png.flaticon.com/512/2618/2618540.png"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+      integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
-    <h1>start of project</h1>
+    <header class="header">
+      <h1>Frequently asked questions</h1>
+      <div class="collapse-Wrapper">
+        <div class="collap-Wrap">
+          <div class="title-Btn-Wrap">
+            <h3>why shouldnt we truts atoms</h3>
+            <button class="open-Close-Btn">
+              <i class="fa-solid fa-caret-down"></i>
+            </button>
+            <p>Ty make up everything</p>
+          </div>
+        </div>
+        <div class="collap-Wrap">
+          <div class="title-Btn-Wrap">
+            <h3>why shouldnt we truts atoms</h3>
+            <button class="open-Close-Btn">
+              <i class="fa-solid fa-caret-down"></i>
+            </button>
+            <p>Ty make up everything</p>
+          </div>
+        </div>
+      </div>
+    </header>
     <script src="script.js"></script>
   </body>
 </html>
