website responsvness added

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
     <header class="header">
       <h2>Frequently asked questions</h2>
       <div class="collapse-Wrapper">
-        <div class="collap-Wrap">
+        <div class="collap-Wrap active">
           <div class="title-Btn-Wrap">
             <h3>why shouldnt we truts atoms</h3>
             <button class="open-Close-Btn">
