added function and some tyling error fix

--- a/src/index.html
+++ b/src/index.html
@@ -21,10 +21,10 @@
     <header class="header">
       <h2>Frequently asked questions</h2>
       <div class="collapse-Wrapper">
-        <div class="collap-Wrap active">
+        <div class="collap-Wrap">
           <div class="title-Btn-Wrap">
             <h3>why shouldnt we truts atoms</h3>
-            <button class="open-Close-Btn">
+            <button id="open-Btn" class="open-Close-Btn">
               <i class="fa-solid fa-caret-down"></i>
             </button>
           </div>
@@ -32,12 +32,30 @@
         </div>
         <div class="collap-Wrap">
           <div class="title-Btn-Wrap">
-            <h3>why shouldnt we truts atoms</h3>
-            <button class="open-Close-Btn">
+            <h3>What is 1 + 1?</h3>
+            <button id="open-Btn" class="open-Close-Btn">
               <i class="fa-solid fa-caret-down"></i>
             </button>
           </div>
-          <p>Ty make up everything</p>
+          <p>1 + 1 is 5</p>
+        </div>
+        <div class="collap-Wrap">
+          <div class="title-Btn-Wrap">
+            <h3>Lorem ipsum dolor sit amet</h3>
+            <button id="open-Btn" class="open-Close-Btn">
+              <i class="fa-solid fa-caret-down"></i>
+            </button>
+          </div>
+          <p>consectetur</p>
+        </div>
+        <div class="collap-Wrap">
+          <div class="title-Btn-Wrap">
+            <h3>Lorem ipsum dolor sit amet?</h3>
+            <button id="open-Btn" class="open-Close-Btn">
+              <i class="fa-solid fa-caret-down"></i>
+            </button>
+          </div>
+          <p>Lorem ipsum dolor sit amet</p>
         </div>
       </div>
     </header>
